# libzmodem

./: .gitignore  AUTHORS  ChangeLog  ChangeLog.pre2000  INSTALL  Makefile.am  NEWS  README  Specfile.in  acinclude.m4  check.lrzsz  config.h.in  configure.ac  configure.in  do_configure.sh
intl/: dcgettext.c
lib/: Makefile.am  error.c  strtol.c  xstrtol.c
man/: Makefile.in
po/: Makevars  de.gmo  de.po  lrzsz.pot
src/: Makefile.am  _zmodem.h  canit.c  canit.h  crctab.c  crctab.h  log.c  log.h  lrz.c  lsz.c  mrz.c  msz.c  protname.c  rbsb.c  rzsz.h  tcp.c  timing.c  zglobal.h  zm.c  zm.h  zmodem.h  zperr.c  zreadline.c  zreadline.h
testsuite/: Makefile.am  Makefile.in
testsuite/lrzsz/: crc.exp  newer.exp  uppercase.exp
