EXTRA_DIST = global-conf.exp

#AUTOMAKE_OPTIONS=dejagnu

#export DEJAGNU

#DEJATOOL = config lib lrzsz

AM_DISTFILES=Makefile.am Makefile.in
CLEANFILES=lrzsz.log lrzsz.sum site.bak
DISTCLEANFILES=site.exp

# dist-hook:
# 	mkdir $(distdir)/config
# 	mkdir $(distdir)/lib
# 	mkdir $(distdir)/lrzsz
# 	mkdir $(distdir)/testsuite

# 	cp -p $(srcdir)/config/*.exp $(distdir)/config
# 	cp -p $(srcdir)/lib/*.exp $(distdir)/lib
# 	cp -p $(srcdir)/lrzsz/*.exp $(distdir)/lrzsz
# 	cp -p $(srcdir)/../testsuite/global-conf.exp $(distdir)/testsuite/global-conf.exp
